@@ -793,6 +793,30 @@ ags_fourier_transform_util_inverse_stft_float
 ags_fourier_transform_util_inverse_stft_double
 ags_fourier_transform_util_inverse_stft_complex
 ags_lfo_synth_util_get_type
+ags_lfo_synth_util_get_source
+ags_lfo_synth_util_set_source
+ags_lfo_synth_util_get_source_stride
+ags_lfo_synth_util_set_source_stride
+ags_lfo_synth_util_get_buffer_length
+ags_lfo_synth_util_set_buffer_length
+ags_lfo_synth_util_get_format
+ags_lfo_synth_util_set_format
+ags_lfo_synth_util_get_samplerate
+ags_lfo_synth_util_set_samplerate
+ags_lfo_synth_util_get_lfo_synth_oscillator_mode
+ags_lfo_synth_util_set_lfo_synth_oscillator_mode
+ags_lfo_synth_util_get_frequency
+ags_lfo_synth_util_set_frequency
+ags_lfo_synth_util_get_phase
+ags_lfo_synth_util_set_phase
+ags_lfo_synth_util_get_lfo_depth
+ags_lfo_synth_util_set_lfo_depth
+ags_lfo_synth_util_get_tuning
+ags_lfo_synth_util_set_tuning
+ags_lfo_synth_util_get_offset
+ags_lfo_synth_util_set_offset
+ags_lfo_synth_util_get_frame_count
+ags_lfo_synth_util_set_frame_count
 ags_lfo_synth_util_sin_s8
 ags_lfo_synth_util_sin_s16
 ags_lfo_synth_util_sin_s24
